--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -69,7 +69,9 @@
             </section>
             <section>
                 <div>
-                    <header><h2>Latest news</h2></header>
+                    <header>
+                        <h2>Latest news</h2>
+                    </header>
                     <div>
                         <article>
                             <p>Career</p>
