--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -63,9 +63,15 @@
                         <p>Take a look in our portfolio</p>
                     </header>
                     <div>
-                        <article><h3><a href="#">Interior Design</a></h3></article>
-                        <article><h3><a href="#">Web Development</a></h3></article>
-                        <article><h3><a href="#">Personal Brand</a></h3></article>
+                        <article>
+                            <h3><a href="#">Interior Design</a></h3>
+                        </article>
+                        <article>
+                            <h3><a href="#">Web Development</a></h3>
+                        </article>
+                        <article>
+                            <h3><a href="#">Personal Brand</a></h3>
+                        </article>
                     </div>
                 </div>
             </section>
@@ -119,19 +125,19 @@
                     </header>
                     <div>
                         <article>
-                            <blockquote cite="Yuri Y.">
+                            <blockquote>
                                 I am completely blown away. Thanks to Techium, we've just launched our 5th website!
                                 <cite>Yuri Y.</cite>
                             </blockquote>
                         </article>
                         <article>
-                            <blockquote cite="Dorrie S.">
+                            <blockquote>
                                 Thank you so much for your help. Techium company is awesome!
                                 <cite>Dorrie S.</cite>
                             </blockquote>
                         </article>
                         <article>
-                            <blockquote cite="Sven H.">
+                            <blockquote>
                                 I love your system. Definitely worth the investment. I'd be lost without Techium company.
                                 <cite>Sven H.</cite>
                             </blockquote>
