--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
+
         <!-- Header -->
         <header>
             <div>
@@ -28,9 +29,11 @@
                 </nav>
             </div>
         </header>
+
         <!-- Main -->
         <main>
             <h1>Homepage</h1>
+
             <!-- Hero section -->
             <section>
                 <div>
@@ -38,6 +41,7 @@
                     <a href="#">Get started</a>
                 </div>
             </section>
+
             <!-- Services section -->
             <section>
                 <div>
@@ -55,6 +59,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- Works section -->
             <section>
                 <div>
@@ -75,6 +80,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- About Us section -->
             <section>
                 <div>
@@ -93,6 +99,7 @@
                     <a href="about.html">Learn more about us</a>
                 </div>
             </section>
+
             <!-- Latest news section -->
             <section>
                 <div>
@@ -116,6 +123,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- Testimonials section -->
             <section>
                 <div>
@@ -126,25 +134,26 @@
                     <div>
                         <article>
                             <blockquote>
-                                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
                                 <cite>Yuri Y.</cite>
                             </blockquote>
                         </article>
                         <article>
                             <blockquote>
-                                Thank you so much for your help. Techium company is awesome!
+                                <p>Thank you so much for your help. Techium company is awesome!</p>
                                 <cite>Dorrie S.</cite>
                             </blockquote>
                         </article>
                         <article>
                             <blockquote>
-                                I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
                                 <cite>Sven H.</cite>
                             </blockquote>
                         </article>
                     </div>
                 </div>
             </section>
+
             <!-- Contact section -->
             <section>
                 <div>
