--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -173,7 +173,7 @@
         </main>
         <!-- Footer -->
         <footer>
-            <p>234 Washington Street<br>Urbana, Illinois</p>
+            <p>234 Washington Street</p><br><p>Urbana, Illinois</p>
             <div>
                 <ul>
                     <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
